--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reduxcoursaz",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://MelissaDaCosta.github.io/react-gh-pages",
+  "homepage": "https://MelissaDaCosta.github.io/reduxPlusMoins",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
